Add Features section responsive styles

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                   class="max-w-64 w-full space-y-1.5 md:max-w-max lg:space-y-3"
                 >
                   <b
-                    class="inline-block font-bold text-2xl md:text-3xl lg:text-4xl"
+                    class="inline-block font-bold text-xl sm:text-2xl md:text-3xl lg:text-4xl"
                     >10+</b
                   >
                   <p class="text-[17px] sm:text-lg lg:text-[19px]">
@@ -282,7 +282,7 @@
                   class="max-w-64 w-full space-y-1.5 md:max-w-max lg:space-y-3"
                 >
                   <b
-                    class="inline-block font-bold text-2xl md:text-3xl lg:text-4xl"
+                    class="inline-block font-bold text-xl sm:text-2xl md:text-3xl lg:text-4xl"
                     >5+</b
                   >
                   <p class="text-[17px] sm:text-lg lg:text-[19px]">
@@ -309,7 +309,7 @@
                   class="max-w-64 w-full space-y-1.5 md:max-w-max lg:space-y-3"
                 >
                   <b
-                    class="inline-block font-bold text-2xl md:text-3xl lg:text-4xl"
+                    class="inline-block font-bold text-xl sm:text-2xl md:text-3xl lg:text-4xl"
                     >30+</b
                   >
                   <p class="text-[17px] sm:text-lg lg:text-[19px]">
@@ -321,108 +321,126 @@
           </div>
         </div>
       </section>
-    </main>
 
-    <div class="hidden">
       <!-- Features -->
       <section class="pb-16">
-        <div class="container">
+        <div class="container-secondary">
           <!-- Title -->
-          <h2 class="inline-block text-[40px] font-semibold mb-5">
+          <h2 class="inline-block mb-5 mx-3.5 lg:mx-0">
             Nima uchun aynan biz?
           </h2>
 
           <!-- Main content -->
-          <ol class="grid grid-cols-3 gap-5 mb-5">
+          <ol class="grid grid-cols-1 gap-5 mb-5 sm:grid-cols-2 lg:grid-cols-2">
             <!-- 1 -->
-            <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5 text-brand-primary">1.</div>
+            <li class="bg-white p-3.5 rounded-3xl sm:py-7 lg:p-8">
+              <b
+                class="inline-block mb-5 font-bold text-xl text-brand-primary sm:text-2xl md:text-3xl lg:text-4xl"
+                >1.</b
+              >
 
               <!-- Title -->
-              <h3 class="font-semibold text-2xl mb-5">
+              <h3 class="font-semibold text-xl mb-5 md:text-2xl">
                 Tajribali o'qituvchilar
               </h3>
 
               <!-- Description -->
-              <p class="text-[19px]">
+              <p class="text-[17px] sm:text-lg lg:text-[19px]">
                 Har bir o'qituvchimiz o'z sohasining mutaxassisi bo'lib,
                 o'quvchilarga chuqur va tushunarli bilim berishga intiladi.
               </p>
             </li>
 
             <!-- 2 -->
-            <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5 text-brand-primary">2.</div>
+            <li class="bg-white p-3.5 rounded-3xl sm:py-7 lg:p-8">
+              <b
+                class="inline-block mb-5 font-bold text-xl text-brand-primary sm:text-2xl md:text-3xl lg:text-4xl"
+                >2.</b
+              >
 
               <!-- Title -->
-              <h3 class="font-semibold text-2xl mb-5">Shaxsiy yondashuv</h3>
+              <h3 class="font-semibold text-xl mb-5 md:text-2xl">
+                Shaxsiy yondashuv
+              </h3>
 
               <!-- Description -->
-              <p class="text-[19px]">
+              <p class="text-[17px] sm:text-lg lg:text-[19px]">
                 Biz har bir o'quvchining o'ziga xosligi va qobiliyatini inobatga
                 olgan holda, ularga individual yondashamiz.
               </p>
             </li>
 
             <!-- 3 -->
-            <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5 text-brand-primary">3.</div>
+            <li class="bg-white p-3.5 rounded-3xl sm:py-7 lg:p-8">
+              <b
+                class="inline-block mb-5 font-bold text-xl text-brand-primary sm:text-2xl md:text-3xl lg:text-4xl"
+                >3.</b
+              >
 
               <!-- Title -->
-              <h3 class="font-semibold text-2xl mb-5">
+              <h3 class="font-semibold text-xl mb-5 md:text-2xl">
                 Amaliy va interaktiv darslar
               </h3>
 
               <!-- Description -->
-              <p class="text-[19px]">
+              <p class="text-[17px] sm:text-lg lg:text-[19px]">
                 Nazariyani amaliyot bilan uyg'unlashtirib, o'quvchilarning
                 bilimlarini mustahkamlashga katta e'tibor qaratamiz.
               </p>
             </li>
 
             <!-- 4 -->
-            <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5 text-brand-primary">4.</div>
+            <li class="bg-white p-3.5 rounded-3xl sm:py-7 lg:p-8">
+              <b
+                class="inline-block mb-5 font-bold text-xl text-brand-primary sm:text-2xl md:text-3xl lg:text-4xl"
+                >4.</b
+              >
 
               <!-- Title -->
-              <h3 class="font-semibold text-2xl mb-5">
+              <h3 class="font-semibold text-xl mb-5 md:text-2xl">
                 Zamonaviy o'quv muhiti
               </h3>
 
               <!-- Description -->
-              <p class="text-[19px]">
+              <p class="text-[17px] sm:text-lg lg:text-[19px]">
                 Qulay sinfxonalar, texnologik vositalar va do'stona muhit —
                 samarali ta'lim uchun eng yaxshi sharoitlarni yaratamiz.
               </p>
             </li>
 
             <!-- 5 -->
-            <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5 text-brand-primary">5.</div>
+            <li class="bg-white p-3.5 rounded-3xl sm:py-7 lg:p-8">
+              <b
+                class="inline-block mb-5 font-bold text-xl text-brand-primary sm:text-2xl md:text-3xl lg:text-4xl"
+                >5.</b
+              >
 
               <!-- Title -->
-              <h3 class="font-semibold text-2xl mb-5">
+              <h3 class="font-semibold text-xl mb-5 md:text-2xl">
                 Iqtidorni rivojlantirish
               </h3>
 
               <!-- Description -->
-              <p class="text-[19px]">
+              <p class="text-[17px] sm:text-lg lg:text-[19px]">
                 Tanlovlar, musobaqalar va to'garaklar orqali o'quvchilarning
                 ijodkorligi va liderlik qobiliyatini rivojlantiramiz.
               </p>
             </li>
 
             <!-- 6 -->
-            <li class="bg-white p-8 rounded-3xl">
-              <div class="font-bold text-4xl mb-5 text-brand-primary">6.</div>
+            <li class="bg-white p-3.5 rounded-3xl sm:py-7 lg:p-8">
+              <b
+                class="inline-block mb-5 font-bold text-xl text-brand-primary sm:text-2xl md:text-3xl lg:text-4xl"
+                >6.</b
+              >
 
               <!-- Title -->
-              <h3 class="font-semibold text-2xl mb-5">
+              <h3 class="font-semibold text-xl mb-5 md:text-2xl">
                 Muvaffaqiyatga yo'naltirilgan tizim
               </h3>
 
               <!-- Description -->
-              <p class="text-[19px]">
+              <p class="text-[17px] sm:text-lg lg:text-[19px]">
                 Biz faqat bilim emas, balki hayotda muvaffaqiyatga erishish
                 uchun zarur bo'lgan ko'nikmalarni ham o'rgatamiz.
               </p>
@@ -430,7 +448,9 @@
           </ol>
         </div>
       </section>
+    </main>
 
+    <div class="hidden">
       <!-- Order for call -->
       <section class="pb-16">
         <div class="container">
