Add SEO meta tags

--- a/index.html
+++ b/index.html
@@ -1,42 +1,44 @@
 <!DOCTYPE html>
 <html lang="uz">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Favicon -->
-    <link
-      sizes="180x180"
-      rel="apple-touch-icon"
-      href="./apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      sizes="32x32"
-      type="image/png"
-      href="./favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      sizes="16x16"
-      type="image/png"
-      href="./favicon-16x16.png"
-    />
+  <!-- Title -->
+  <title>Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish</title>
 
-    <!-- Web Manifest -->
-    <link rel="manifest" href="./site.webmanifest" />
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Alhikma Ilm — Dasturlash, texnologiyalar va zamonaviy kasblar bo'yicha chuqur bilim olish uchun zamonaviy IT maktab. Andijonda joylashgan amaliy darslar va tajribali mentorlar bilan o'qish imkoni.">
+  <meta name="keywords" content="Alhikma, IT kurslar, Dasturlash o'quv markazi, Andijon IT, Zamonaviy kasblar, Frontend, Backend, Kompyuter savodxonligi">
+  <meta name="author" content="Alhikma Ilm">
+  <meta name="robots" content="index, follow">
 
-    <!-- Title -->
-    <title>Alhikma Ilm</title>
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish">
+  <meta property="og:description" content="Andijonda zamonaviy IT kurslar: amaliy darslar, mentorlar, real loyihalar. Kelajak IT mutaxassislari shu yerdan yo'lga chiqadi!">
+  <meta property="og:image" content="https://alhikma.uz/preview-image.jpg">
+  <meta property="og:url" content="https://alhikma.uz">
+  <meta property="og:site_name" content="Alhikma Ilm">
 
-    <!-- Font (Inter) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="./src/styles/fonts/inter.css" />
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish">
+  <meta name="twitter:description" content="Andijonda zamonaviy IT kurslar: amaliy darslar, mentorlar, real loyihalar. Kelajak IT mutaxassislari shu yerdan yo'lga chiqadi!">
+  <meta name="twitter:image" content="https://alhikma.uz/preview-image.jpg">
 
-    <!-- Styles -->
-    <link rel="stylesheet" href="./src/styles/output.css" />
-  </head>
+  <!-- Icons & Manifest -->
+  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+  <link rel="manifest" href="./site.webmanifest">
+
+  <!-- Fonts & Styles -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="./src/styles/fonts/inter.css">
+  <link rel="stylesheet" href="./src/styles/output.css">
+</head>
 
   <!-- Body -->
   <body>
@@ -331,7 +333,7 @@
           </h2>
 
           <!-- Main content -->
-          <ol class="grid grid-cols-1 gap-5 mb-5 sm:grid-cols-2 lg:grid-cols-2">
+          <ol class="grid grid-cols-1 gap-5 mb-5 sm:grid-cols-2 lg:grid-cols-3">
             <!-- 1 -->
             <li class="bg-white p-3.5 rounded-3xl sm:py-7 lg:p-8">
               <b
