Add 'Order for call' section responsive styles

--- a/index.html
+++ b/index.html
@@ -1,44 +1,76 @@
 <!DOCTYPE html>
 <html lang="uz">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Title -->
-  <title>Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish</title>
+    <!-- Title -->
+    <title>Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish</title>
 
-  <!-- SEO Meta Tags -->
-  <meta name="description" content="Alhikma Ilm — Dasturlash, texnologiyalar va zamonaviy kasblar bo'yicha chuqur bilim olish uchun zamonaviy IT maktab. Andijonda joylashgan amaliy darslar va tajribali mentorlar bilan o'qish imkoni.">
-  <meta name="keywords" content="Alhikma, IT kurslar, Dasturlash o'quv markazi, Andijon IT, Zamonaviy kasblar, Frontend, Backend, Kompyuter savodxonligi">
-  <meta name="author" content="Alhikma Ilm">
-  <meta name="robots" content="index, follow">
+    <!-- SEO Meta Tags -->
+    <meta
+      name="description"
+      content="Alhikma Ilm — Dasturlash, texnologiyalar va zamonaviy kasblar bo'yicha chuqur bilim olish uchun zamonaviy IT maktab. Andijonda joylashgan amaliy darslar va tajribali mentorlar bilan o'qish imkoni."
+    />
+    <meta
+      name="keywords"
+      content="Alhikma, IT kurslar, Dasturlash o'quv markazi, Andijon IT, Zamonaviy kasblar, Frontend, Backend, Kompyuter savodxonligi"
+    />
+    <meta name="author" content="Alhikma Ilm" />
+    <meta name="robots" content="index, follow" />
 
-  <!-- Open Graph / Facebook -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish">
-  <meta property="og:description" content="Andijonda zamonaviy IT kurslar: amaliy darslar, mentorlar, real loyihalar. Kelajak IT mutaxassislari shu yerdan yo'lga chiqadi!">
-  <meta property="og:image" content="https://alhikma.uz/preview-image.jpg">
-  <meta property="og:url" content="https://alhikma.uz">
-  <meta property="og:site_name" content="Alhikma Ilm">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish"
+    />
+    <meta
+      property="og:description"
+      content="Andijonda zamonaviy IT kurslar: amaliy darslar, mentorlar, real loyihalar. Kelajak IT mutaxassislari shu yerdan yo'lga chiqadi!"
+    />
+    <meta property="og:image" content="https://alhikma.uz/preview-image.jpg" />
+    <meta property="og:url" content="https://alhikma.uz" />
+    <meta property="og:site_name" content="Alhikma Ilm" />
 
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish">
-  <meta name="twitter:description" content="Andijonda zamonaviy IT kurslar: amaliy darslar, mentorlar, real loyihalar. Kelajak IT mutaxassislari shu yerdan yo'lga chiqadi!">
-  <meta name="twitter:image" content="https://alhikma.uz/preview-image.jpg">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish"
+    />
+    <meta
+      name="twitter:description"
+      content="Andijonda zamonaviy IT kurslar: amaliy darslar, mentorlar, real loyihalar. Kelajak IT mutaxassislari shu yerdan yo'lga chiqadi!"
+    />
+    <meta name="twitter:image" content="https://alhikma.uz/preview-image.jpg" />
 
-  <!-- Icons & Manifest -->
-  <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
-  <link rel="manifest" href="./site.webmanifest">
+    <!-- Icons & Manifest -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon-16x16.png"
+    />
+    <link rel="manifest" href="./site.webmanifest" />
 
-  <!-- Fonts & Styles -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" href="./src/styles/fonts/inter.css">
-  <link rel="stylesheet" href="./src/styles/output.css">
-</head>
+    <!-- Fonts & Styles -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="./src/styles/fonts/inter.css" />
+    <link rel="stylesheet" href="./src/styles/output.css" />
+  </head>
 
   <!-- Body -->
   <body>
@@ -450,33 +482,34 @@
           </ol>
         </div>
       </section>
-    </main>
 
-    <div class="hidden">
       <!-- Order for call -->
       <section class="pb-16">
-        <div class="container">
+        <div class="container-secondary">
           <div
-            class="relative overflow-hidden bg-brand-dark text-white px-12 py-16 rounded-3xl"
+            class="relative overflow-hidden bg-brand-dark text-white rounded-3xl p-3.5 sm:py-12 lg:px-12 lg:py-16"
           >
-            <div class="grid grid-cols-2 gap-5 relative z-10">
+            <div class="grid grid-cols-1 gap-5 relative z-10 md:grid-cols-2">
               <!-- Content details -->
-              <div>
-                <h2 class="text-[40px] font-semibold mb-5 text-brand-primary">
-                  Siz bilan bog'lanib, sizni savolingizga javob beramiz
-                </h2>
+              <div class="flex justify-center md:justify-normal">
+                <div class="max-w-md md:max-w-full">
+                  <h2 class="mb-5 text-brand-primary">
+                    Siz bilan bog'lanib, sizni savolingizga javob beramiz
+                  </h2>
 
-                <p class="text-[19px]">
-                  Agar sizda savol yoki takliflar mavjud bo'lsa, biz sizni
-                  eshitishga tayyormiz! Siz shunchaki o'zingizni ismingiz va
-                  telefon raqamingizni biz bilan ulashing. So'ngra
-                  operatorlarimiz qisqa vaqtlar ichida siz bilan bog'lanishadi.
-                </p>
+                  <p class="text-lg sm:text-[19px]">
+                    Agar sizda savol yoki takliflar mavjud bo'lsa, biz sizni
+                    eshitishga tayyormiz! Siz shunchaki o'zingizni ismingiz va
+                    telefon raqamingizni biz bilan ulashing. So'ngra
+                    operatorlarimiz qisqa vaqtlar ichida siz bilan
+                    bog'lanishadi.
+                  </p>
+                </div>
               </div>
 
               <!-- Form -->
               <form class="flex flex-col items-center justify-center">
-                <div class="max-w-md space-y-5">
+                <div class="space-y-5 max-w-md md:max-w-max lg:max-w-md">
                   <!-- Name input -->
                   <input
                     name="name"
@@ -513,7 +546,9 @@
           </div>
         </div>
       </section>
+    </main>
 
+    <div class="hidden">
       <!-- Courses -->
       <section id="courses" class="pb-16">
         <div class="container">
