Add FAQ section responsive styles

--- a/index.html
+++ b/index.html
@@ -580,14 +580,12 @@
           </div>
         </div>
       </section>
-    </main>
 
-    <div class="hidden">
       <!-- FAQ -->
       <section id="faq" class="pb-16">
-        <div class="container !max-w-5xl">
+        <div class="container-secondary !max-w-5xl">
           <!-- Title -->
-          <h2 class="text-center text-[40px] font-semibold mb-5">
+          <h2 class="mb-5 mx-3.5 lg:mx-auto lg:text-center">
             Tez tez so'raladigan savollar
           </h2>
 
@@ -595,7 +593,9 @@
           <div id="faq-container" class="space-y-5"></div>
         </div>
       </section>
+    </main>
 
+    <div class="hidden">
       <!-- CTA (Form) -->
       <section id="form">
         <div class="container">
