--- a/index.html
+++ b/index.html
@@ -668,35 +668,37 @@
       </div>
     </section>
 
-    <div class="hidden">
-      <!-- Footer -->
-      <footer>
-        <div class="container">
-          <div class="flex items-center justify-between h-20 sm:h-24 md:h-28">
-            <!-- Logo -->
-            <h1
-              class="font-semibold text-[22px] uppercase sm:text-2xl md:text-3xl"
-              translate="no"
-            >
-              <a href="index.html">Alhikma Ilm</a>
-            </h1>
+    <!-- Footer -->
+    <footer>
+      <div class="container pb-5 sm:pb-0">
+        <div
+          class="flex items-center justify-between h-20 sm:mb-0 sm:h-24 md:h-28"
+        >
+          <!-- Logo -->
+          <h1
+            class="font-semibold text-[22px] uppercase sm:text-2xl md:text-3xl"
+            translate="no"
+          >
+            <a href="index.html">Alhikma Ilm</a>
+          </h1>
 
-            <div class="flex items-center gap-8">
-              <!-- Tel -->
-              <div>
-                <a
-                  href="tel:+998742009393"
-                  class="font-medium text-lg transition-colors duration-200 hover:text-brand-primary"
-                >
-                  +998 (74) 200 93 93
-                </a>
+          <div class="flex items-center gap-8">
+            <!-- Tel -->
+            <div>
+              <a
+                href="tel:+998742009393"
+                class="font-medium transition-colors duration-200 hover:text-brand-primary xs:text-lg"
+              >
+                +998 (74) 200 93 93
+              </a>
 
-                <p class="text-right text-sm text-brand-dark/70">
-                  Du - shan, 9:00 - 18:00
-                </p>
-              </div>
+              <p class="text-right text-sm text-brand-dark/70">
+                Du - shan, 9:00 - 18:00
+              </p>
+            </div>
 
-              <!-- Action button -->
+            <!-- Action button -->
+            <div class="hidden btn-3d-wrapper sm:flex">
               <a
                 target="_blank"
                 href="https://t.me/alhikmagroup"
@@ -707,8 +709,19 @@
             </div>
           </div>
         </div>
-      </footer>
-    </div>
+
+        <!-- Mobile telegram link -->
+        <div class="btn-3d-wrapper justify-center sm:hidden">
+          <a
+            target="_blank"
+            href="https://t.me/alhikmagroup"
+            class="btn-3d w-full bg-blue-400 border-blue-800 hover:bg-blue-500 xs:w-48"
+          >
+            Telegram
+          </a>
+        </div>
+      </div>
+    </footer>
 
     <!-- Scripts -->
     <script type="module" src="./src/scripts/index.js"></script>
