Refactor SEO meta tags

--- a/index.html
+++ b/index.html
@@ -8,30 +8,30 @@
     <title>Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish</title>
 
     <!-- SEO Meta Tags -->
+    <meta name="author" content="Alhikma Ilm" />
+    <meta name="robots" content="index, follow" />
     <meta
       name="description"
       content="Alhikma Ilm — Dasturlash, texnologiyalar va zamonaviy kasblar bo'yicha chuqur bilim olish uchun zamonaviy IT maktab. Andijonda joylashgan amaliy darslar va tajribali mentorlar bilan o'qish imkoni."
     />
     <meta
       name="keywords"
-      content="Alhikma, IT kurslar, Dasturlash o'quv markazi, Andijon IT, Zamonaviy kasblar, Frontend, Backend, Kompyuter savodxonligi"
+      content="Alhikma, Ilm, IT kurslar, Dasturlash o'quv markazi, Andijon IT, Zamonaviy kasblar, Frontend, Backend, Kompyuter savodxonligi, Bo'ston tumani"
     />
-    <meta name="author" content="Alhikma Ilm" />
-    <meta name="robots" content="index, follow" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Alhikma Ilm" />
+    <meta property="og:url" content="https://alhikma.uz" />
     <meta
       property="og:title"
       content="Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish"
     />
+    <meta property="og:image" content="https://alhikma.uz/preview.jpg" />
     <meta
       property="og:description"
       content="Andijonda zamonaviy IT kurslar: amaliy darslar, mentorlar, real loyihalar. Kelajak IT mutaxassislari shu yerdan yo'lga chiqadi!"
     />
-    <meta property="og:image" content="https://alhikma.uz/preview-image.jpg" />
-    <meta property="og:url" content="https://alhikma.uz" />
-    <meta property="og:site_name" content="Alhikma Ilm" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -39,28 +39,28 @@
       name="twitter:title"
       content="Alhikma Ilm — IT Kurslar, Dasturlash va Rivojlanish"
     />
+    <meta name="twitter:image" content="https://alhikma.uz/preview.jpg" />
     <meta
       name="twitter:description"
       content="Andijonda zamonaviy IT kurslar: amaliy darslar, mentorlar, real loyihalar. Kelajak IT mutaxassislari shu yerdan yo'lga chiqadi!"
     />
-    <meta name="twitter:image" content="https://alhikma.uz/preview-image.jpg" />
 
     <!-- Icons & Manifest -->
     <link
-      rel="apple-touch-icon"
       sizes="180x180"
+      rel="apple-touch-icon"
       href="./apple-touch-icon.png"
     />
     <link
       rel="icon"
-      type="image/png"
       sizes="32x32"
+      type="image/png"
       href="./favicon-32x32.png"
     />
     <link
       rel="icon"
-      type="image/png"
       sizes="16x16"
+      type="image/png"
       href="./favicon-16x16.png"
     />
     <link rel="manifest" href="./site.webmanifest" />
@@ -161,17 +161,21 @@
 
           <!-- Action buttons -->
           <div class="flex flex-wrap items-center gap-5 md:flex-nowrap">
-            <a
-              href="#form"
-              class="btn-3d w-full bg-brand-primary border-orange-800 hover:bg-orange-500 xs:w-48"
-              >Qabulga yozilish</a
-            >
+            <div class="btn-3d-wrapper w-full xs:w-auto">
+              <a
+                href="#form"
+                class="btn-3d w-full bg-brand-primary border-orange-800 hover:bg-orange-500 xs:w-48"
+                >Qabulga yozilish</a
+              >
+            </div>
 
-            <a
-              href="#courses"
-              class="btn-3d w-full bg-brand-secondary border-green-800 hover:bg-green-600 xs:w-48"
-              >Barcha kurslar</a
-            >
+            <div class="btn-3d-wrapper w-full xs:w-auto">
+              <a
+                href="#courses"
+                class="btn-3d w-full bg-brand-secondary border-green-800 hover:bg-green-600 xs:w-48"
+                >Barcha kurslar</a
+              >
+            </div>
           </div>
         </div>
 
